update file and fix bug

--- a/configFiles/create_channel.yaml
+++ b/configFiles/create_channel.yaml
@@ -36,7 +36,7 @@ spec:
         - name: CHANNEL_NAME
           value: channel1
         - name: ORDERER_URL
-          value: blockchain-orderer:31010
+          value: orderer.example.com:7050
         - name: CORE_PEER_ADDRESSAUTODETECT
           value: "false"
         - name: CORE_PEER_NETWORKID
