--- a/artifacts/configtx.yaml
+++ b/artifacts/configtx.yaml
@@ -20,7 +20,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: crypto-config/ordererOrganizations/example.com/msp
+        MSPDir: crypto-config/ordererOrganizations/orderer.example.com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
