--- a/configFiles/blockchain-services.yaml
+++ b/configFiles/blockchain-services.yaml
@@ -128,13 +128,13 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: example.com
-  name: orderer0
+  name: orderer
 spec:
  selector:
    app: hyperledger
    role: orderer
    org: orderer-org
-   orderer-id: orderer0
+   orderer-id: orderer
  clusterIP: None
  ports:
    - name: listen-endpoint
