--- a/configFiles/join_channel.yaml
+++ b/configFiles/join_channel.yaml
@@ -25,9 +25,9 @@ spec:
         - name: CORE_PEER_NETWORKID
           value: nid1
         - name: ORDERER_URL
-          value: blockchain-orderer:31010
+          value: orderer.example.com:7050
         - name: CORE_PEER_ADDRESS
-          value: blockchain-org1peer1:30110
+          value: peer0.org1.example.com:7051
         - name: CORE_PEER_LOCALMSPID
           value: Org1MSP
         - name: CORE_PEER_MSPID
@@ -54,9 +54,9 @@ spec:
         - name: CORE_PEER_NETWORKID
           value: nid1
         - name: ORDERER_URL
-          value: blockchain-orderer:31010
+          value: orderer.example.com:7050
         - name: CORE_PEER_ADDRESS
-          value: blockchain-org2peer1:30210
+          value: peer0.org2.example.com:7051:7051
         - name: CORE_PEER_LOCALMSPID
           value: Org2MSP
         - name: CORE_PEER_MSPID
