--- a/configFiles/blockchain-namespace.yaml
+++ b/configFiles/blockchain-namespace.yaml
@@ -2,6 +2,11 @@
 apiVersion: v1
 kind: Namespace
 metadata:
+    name: temp
+---
+apiVersion: v1
+kind: Namespace
+metadata:
     name: fabric-zk-kafka
 ---
 apiVersion: v1
