--- a/configFiles/createNfsVolume.yaml
+++ b/configFiles/createNfsVolume.yaml
@@ -13,8 +13,8 @@ spec:
   persistentVolumeReclaimPolicy: Recycle
   storageClassName: slow
   nfs:
-    path: /data/nfs/k8s_fabric/
-    server: 10.222.77.86
+    path: /data/share/k8s2Fabric/
+    server: 45.76.160.101
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
