--- a/artifacts/crypto-config.yaml
+++ b/artifacts/crypto-config.yaml
@@ -6,7 +6,7 @@ OrdererOrgs:
   # Orderer
   # ---------------------------------------------------------------------------
   - Name: Orderer
-    Domain: example.com
+    Domain: example-com
     # ---------------------------------------------------------------------------
     # "Specs" - See PeerOrgs below for complete description
     # ---------------------------------------------------------------------------
@@ -20,7 +20,7 @@ PeerOrgs:
   # Org1
   # ---------------------------------------------------------------------------
   - Name: Org1
-    Domain: org1.example.com
+    Domain: org1-example-com
     # ---------------------------------------------------------------------------
     # "Specs"
     # ---------------------------------------------------------------------------
@@ -38,8 +38,8 @@ PeerOrgs:
     #                 Org.Domain, respectively.
     # ---------------------------------------------------------------------------
     # Specs:
-    #   - Hostname: foo # implicitly "foo.org1.example.com"
-    #     CommonName: foo27.org5.example.com # overrides Hostname-based FQDN set above
+    #   - Hostname: foo # implicitly "foo.org1.example-com"
+    #     CommonName: foo27.org5.example-com # overrides Hostname-based FQDN set above
     #   - Hostname: bar
     #   - Hostname: baz
     # ---------------------------------------------------------------------------
@@ -69,7 +69,7 @@ PeerOrgs:
   # Org2: See "Org1" for full specification
   # ---------------------------------------------------------------------------
   - Name: Org2
-    Domain: org2.example.com
+    Domain: org2-example-com
     Template:
       Count: 2
     Users:
@@ -78,7 +78,7 @@ PeerOrgs:
   # Org3: See "Org1" for full specification
   # ---------------------------------------------------------------------------
   - Name: Org3
-    Domain: org3.example.com
+    Domain: org3-example-com
     Template:
       Count: 2
     Users:
@@ -87,7 +87,7 @@ PeerOrgs:
   # Org4: See "Org1" for full specification
   # ---------------------------------------------------------------------------
   - Name: Org4
-    Domain: org4.example.com
+    Domain: org4-example-com
     Template:
       Count: 2
     Users:
