--- a/configFiles/blockchain-namespace.yaml
+++ b/configFiles/blockchain-namespace.yaml
@@ -12,19 +12,24 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: org1.example.com
+    name: example-com
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: org2.example.com
+    name: org1-example-com
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: org3.example.com
+    name: org2-example-com
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-    name: org4.example.com
+    name: org3-example-com
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: org4-example-com
