--- a/configFiles/orderer.yaml
+++ b/configFiles/orderer.yaml
@@ -2,7 +2,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  namespace: example.com
+  namespace: example-com
   name: orderer
 spec:
   replicas: 1
@@ -49,10 +49,10 @@ spec:
         volumeMounts:
          - mountPath: /var/hyperledger/orderer/msp
            name: nfs
-           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/msp
+           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer-example-com/msp
          - mountPath: /var/hyperledger/orderer/tls
            name: nfs
-           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer.example.com/tls
+           subPath: crypto-config/ordererOrganizations/example.com/orderers/orderer-example-com/tls
          - mountPath: /var/hyperledger/orderer/genesis.block
            name: nfs
            subPath: channel-artifacts/genesis.block
@@ -62,4 +62,3 @@ spec:
         - name: nfs
           persistentVolumeClaim:
             claimName: nfs-pvc
-     port: 7050
