--- a/artifacts/configtx.yaml
+++ b/artifacts/configtx.yaml
@@ -20,7 +20,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: crypto-config/ordererOrganizations/orderer.example.com/msp
+        MSPDir: crypto-config/ordererOrganizations/orderer-example-com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
@@ -35,7 +35,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org1MSP
 
-        MSPDir: crypto-config/peerOrganizations/org1.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/org1-example-com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
@@ -46,7 +46,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org1.example.com
+            - Host: peer0.org1-example-com
               Port: 7051
 
     - &Org2
@@ -57,7 +57,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org2MSP
 
-        MSPDir: crypto-config/peerOrganizations/org2.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/org2-example-com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
@@ -68,7 +68,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org2.example.com
+            - Host: peer0.org2-example-com
               Port: 7051
 
     - &Org3
@@ -79,7 +79,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org3MSP
 
-        MSPDir: crypto-config/peerOrganizations/org3.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/org3-example-com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
@@ -90,7 +90,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org3.example.com
+            - Host: peer0.org3-example-com
               Port: 7051
 
     - &Org4
@@ -101,7 +101,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org4MSP
 
-        MSPDir: crypto-config/peerOrganizations/org4.example.com/msp
+        MSPDir: crypto-config/peerOrganizations/org4-example-com/msp
 
         # AdminPrincipal dictates the type of principal used for an organization's Admins policy
         # Today, only the values of Role.ADMIN ad Role.MEMBER are accepted, which indicates a principal
@@ -112,7 +112,7 @@ Organizations:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0.org2.example.com
+            - Host: peer0.org4-example-com
               Port: 7051
 
 ################################################################################
@@ -130,7 +130,7 @@ Orderer: &OrdererDefaults
     OrdererType: kafka
 
     Addresses:
-        - orderer0.example.com:7050
+        - orderer.example-com:7050
 
     # Batch Timeout: The amount of time to wait before creating a batch
     BatchTimeout: 2s
