--- a/configFiles/chaincode_instantiate.yaml
+++ b/configFiles/chaincode_instantiate.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  namespace: org1.example.com
+  namespace: org1-example-com
   name: chaincodeinstantiate
 spec:
   backoffLimit: 1
@@ -31,11 +31,11 @@ spec:
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org1-example-com/users/Admin@org1-example-com/msp
         - name: CORE_PEER_LOCALMSPID
           value: Org1MSP
         - name: CORE_PEER_ADDRESS
-          value: peer0.org1.example.com:7051
+          value: peer0.org1-example-com:7051
         - name: GODEBUG
           value: "netdns=go"
         volumeMounts:
