--- a/configFiles/create_channel.yaml
+++ b/configFiles/create_channel.yaml
@@ -37,7 +37,7 @@ spec:
         - name: CHANNEL_NAME
           value: channel1
         - name: ORDERER_URL
-          value: orderer.example.com:7050
+          value: orderer.example-com:7050
         - name: CORE_PEER_ADDRESSAUTODETECT
           value: "false"
         - name: CORE_PEER_NETWORKID
@@ -45,7 +45,7 @@ spec:
         - name: CORE_PEER_LOCALMSPID
           value: Org1MSP
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp/
+          value: /shared/crypto-config/peerOrganizations/org1-example-com/peers/peer0.org1-example-com/msp/
         - name: CORE_LOGGING_LEVEL
           value: debug
         - name: FABRIC_CFG_PATH
