--- a/configFiles/join_channel.yaml
+++ b/configFiles/join_channel.yaml
@@ -26,9 +26,9 @@ spec:
         - name: CORE_PEER_NETWORKID
           value: nid1
         - name: ORDERER_URL
-          value: orderer.example.com:7050
+          value: orderer.example-com:7050
         - name: CORE_PEER_ADDRESS
-          value: peer0.org1.example.com:7051
+          value: peer0.org1-example-com:7051
         - name: CORE_PEER_LOCALMSPID
           value: Org1MSP
         - name: CORE_PEER_MSPID
@@ -55,9 +55,9 @@ spec:
         - name: CORE_PEER_NETWORKID
           value: nid1
         - name: ORDERER_URL
-          value: orderer.example.com:7050
+          value: orderer.example-com:7050
         - name: CORE_PEER_ADDRESS
-          value: peer0.org2.example.com:7051:7051
+          value: peer0.org2-example-com:7051
         - name: CORE_PEER_LOCALMSPID
           value: Org2MSP
         - name: CORE_PEER_MSPID
@@ -66,6 +66,64 @@ spec:
           value: debug
         - name: CORE_PEER_MSPCONFIGPATH
           value: /shared/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp
+        - name: FABRIC_CFG_PATH
+          value: /etc/hyperledger/fabric
+        - name: GODEBUG
+          value: "netdns=go"
+        volumeMounts:
+        - mountPath: /shared
+          name: nfs
+
+      - name: joinchannel3
+        image: hyperledger/fabric-peer:1.2.1
+        imagePullPolicy: Always
+        command: ["sh", "-c", "peer channel fetch newest -o ${ORDERER_URL} -c ${CHANNEL_NAME} && peer channel join -b ${CHANNEL_NAME}_newest.block "]
+        env:
+        - name: CHANNEL_NAME
+          value: channel1
+        - name: CORE_PEER_NETWORKID
+          value: nid1
+        - name: ORDERER_URL
+          value: orderer.example-com:7050
+        - name: CORE_PEER_ADDRESS
+          value: peer0.org3-example-com:7051
+        - name: CORE_PEER_LOCALMSPID
+          value: Org3MSP
+        - name: CORE_PEER_MSPID
+          value: Org3MSP
+        - name: CORE_LOGGING_LEVEL
+          value: debug
+        - name: CORE_PEER_MSPCONFIGPATH
+          value: /shared/crypto-config/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp
+        - name: FABRIC_CFG_PATH
+          value: /etc/hyperledger/fabric
+        - name: GODEBUG
+          value: "netdns=go"
+        volumeMounts:
+        - mountPath: /shared
+          name: nfs
+
+      - name: joinchannel4
+        image: hyperledger/fabric-peer:1.2.1
+        imagePullPolicy: Always
+        command: ["sh", "-c", "peer channel fetch newest -o ${ORDERER_URL} -c ${CHANNEL_NAME} && peer channel join -b ${CHANNEL_NAME}_newest.block "]
+        env:
+        - name: CHANNEL_NAME
+          value: channel1
+        - name: CORE_PEER_NETWORKID
+          value: nid1
+        - name: ORDERER_URL
+          value: orderer.example-com:7050
+        - name: CORE_PEER_ADDRESS
+          value: peer0.org4-example-com:7051
+        - name: CORE_PEER_LOCALMSPID
+          value: Org4MSP
+        - name: CORE_PEER_MSPID
+          value: Org4MSP
+        - name: CORE_LOGGING_LEVEL
+          value: debug
+        - name: CORE_PEER_MSPCONFIGPATH
+          value: /shared/crypto-config/peerOrganizations/org4.example.com/users/Admin@org4.example.com/msp
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: GODEBUG
