--- a/configFiles/chaincode_instantiate.yaml
+++ b/configFiles/chaincode_instantiate.yaml
@@ -14,8 +14,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
-
+            claimName: nfs-pvc-org1-example-com
       containers:
       - name: chaincodeinstantiate
         image: hyperledger/fabric-tools:1.2.1
