--- a/configFiles/createNfsVolume.yaml
+++ b/configFiles/createNfsVolume.yaml
@@ -1,25 +1,74 @@
 ---
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
   namespace: temp
-  name: nfs-pv
+  name: nfs-pvc-temp
 spec:
-  capacity:
-    storage: 1Gi
-  volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
-  storageClassName: slow
-  nfs:
-    path: /data/share/k8s2Fabric/
-    server: 45.76.160.101
+  storageClassName: "slow"
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-pvc
+  namespace: temp
+  name: nfs-pvc-example-com
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: "slow"
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  namespace: temp
+  name: nfs-pvc-org1-example-com
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: "slow"
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  namespace: temp
+  name: nfs-pvc-org2-example-com
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: "slow"
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  namespace: temp
+  name: nfs-pvc-org3-example-com
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: "slow"
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  namespace: temp
+  name: nfs-pvc-org4-example-com
 spec:
   accessModes:
     - ReadWriteMany
