--- a/configFiles/copyArtifactsJob.yaml
+++ b/configFiles/copyArtifactsJob.yaml
@@ -22,4 +22,4 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-temp
