--- a/configFiles/generateArtifactsJob.yaml
+++ b/configFiles/generateArtifactsJob.yaml
@@ -29,4 +29,4 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-temp
