--- a/configFiles/orderer.yaml
+++ b/configFiles/orderer.yaml
@@ -61,4 +61,4 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-example-com
