--- a/configFiles/peerOrg2.yaml
+++ b/configFiles/peerOrg2.yaml
@@ -39,7 +39,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-org2-example-com
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -112,7 +112,7 @@ spec:
       volumes:
        - name: nfs
          persistentVolumeClaim:
-           claimName: nfs-pvc
+           claimName: nfs-pvc-org2-example-com
        - name: run
          hostPath:
             path: /var/run
@@ -176,7 +176,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-org2-example-com
         - name: run
           hostPath:
             path: /var/run
