--- a/configFiles/peerOrg3.yaml
+++ b/configFiles/peerOrg3.yaml
@@ -39,7 +39,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-org3-example-com
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -110,7 +110,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-org3-example-com
         - name: run
           hostPath:
             path: /var/run
@@ -174,7 +174,7 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: nfs-pvc
+            claimName: nfs-pvc-org3-example-com
         - name: run
           hostPath:
             path: /var/run
