--- a/configFiles/copyArtifactsJob.yaml
+++ b/configFiles/copyArtifactsJob.yaml
@@ -15,7 +15,7 @@ spec:
       - name: copyartifacts
         image: alpine:3.7
         imagePullPolicy: Always
-        command: ["sh", "-c", "ls -l /shared; rm -rf /shared/*; ls -l /shared; while [ ! -d /shared/artifacts ]; do echo Waiting for artifacts to be copied; sleep 2; done; sleep 10; ls -l /shared/artifacts; "]
+        command: ["sh", "-c", "ls -l /shared/artifacts; rm -rf /shared/artifacts/*; ls -l /shared/artifacts; while [ ! -d /shared/artifacts ]; do echo Waiting for artifacts to be copied; sleep 2; done; sleep 10; ls -l /shared/artifacts; "]
         volumeMounts:
         - mountPath: /shared
           name: nfs
