--- a/configFiles/chaincode_install.yaml
+++ b/configFiles/chaincode_install.yaml
@@ -51,7 +51,7 @@ spec:
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org2-example-com/users/Admin@org2-example-com/msp
         - name: CORE_PEER_LOCALMSPID
           value: Org2MSP
         - name: CORE_PEER_ADDRESS
