--- a/configFiles/join_channel.yaml
+++ b/configFiles/join_channel.yaml
@@ -36,7 +36,7 @@ spec:
         - name: CORE_LOGGING_LEVEL
           value: debug
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org1.example.com/users/Admin@org1.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org1-example-com/users/Admin@org1-example-com/msp
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: GODEBUG
@@ -65,7 +65,7 @@ spec:
         - name: CORE_LOGGING_LEVEL
           value: debug
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org2.example.com/users/Admin@org2.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org2-example-com/users/Admin@org2-example-com/msp
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: GODEBUG
@@ -94,7 +94,7 @@ spec:
         - name: CORE_LOGGING_LEVEL
           value: debug
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org3.example.com/users/Admin@org3.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org3-example-com/users/Admin@org3-example-com/msp
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: GODEBUG
@@ -123,7 +123,7 @@ spec:
         - name: CORE_LOGGING_LEVEL
           value: debug
         - name: CORE_PEER_MSPCONFIGPATH
-          value: /shared/crypto-config/peerOrganizations/org4.example.com/users/Admin@org4.example.com/msp
+          value: /shared/crypto-config/peerOrganizations/org4-example-com/users/Admin@org4-example-com/msp
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: GODEBUG
