--- a/configFiles/orderer.yaml
+++ b/configFiles/orderer.yaml
@@ -49,13 +49,12 @@ spec:
         volumeMounts:
          - mountPath: /var/hyperledger/orderer/msp
            name: nfs
-           subPath: crypto-config/ordererOrganizations/example.com/orderers/example-com/msp
+           subPath: crypto-config/ordererOrganizations/example-com/orderers/example-com/msp
          - mountPath: /var/hyperledger/orderer/tls
            name: nfs
-           subPath: crypto-config/ordererOrganizations/example.com/orderers/example-com/tls
-         - mountPath: /var/hyperledger/orderer/genesis.block
+           subPath: crypto-config/ordererOrganizations/example-com/orderers/example-com/tls
+         - mountPath: /var/hyperledger/orderer
            name: nfs
-           subPath: channel-artifacts/genesis.block
         ports:
          - containerPort: 7050
       volumes:
