--- a/configFiles/createNfsPV.yaml
+++ b/configFiles/createNfsPV.yaml
@@ -9,7 +9,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: temp
   nfs:
     path: /data/share/k8s2Fabric/
@@ -25,7 +25,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: example-com
   nfs:
     path: /data/share/k8s2Fabric/
@@ -41,7 +41,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: org1-example-com
   nfs:
     path: /data/share/k8s2Fabric/
@@ -57,7 +57,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: org2-example-com
   nfs:
     path: /data/share/k8s2Fabric/
@@ -73,7 +73,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: org3-example-com
   nfs:
     path: /data/share/k8s2Fabric/
@@ -89,7 +89,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: org4-example-com
   nfs:
     path: /data/share/k8s2Fabric/
