--- a/configFiles/peerOrg3.yaml
+++ b/configFiles/peerOrg3.yaml
@@ -115,66 +115,57 @@ spec:
           hostPath:
             path: /var/run
 ---
-# apiVersion: extensions/v1beta1
-# kind: Deployment
-# metadata:
-#    namespace: org3-example-com
-#    name: cli
-# spec:
-#   replicas: 1
-#   template:
-#     metadata:
-#       labels:
-#        app: cli
-#     spec:
-#       containers:
-#         - name: cli
-#           image: hyperledger/fabric-tools:latest
-#           env:
-#           - name: CORE_VM_ENDPOINT
-#             value: "unix:///host/var/run/docker.sock"
-#           - name: GOPATH
-#             value: "/opt/gopath"
-#           - name: FABRIC_LOGGING_SPEC
-#             value: "DEBUG"
-#           - name: CORE_PEER_ID
-#             value: "cli"
-#           - name: CORE_PEER_TLS_ENABLED
-#             value: "true"
-#           - name: CORE_PEER_TLS_CERT_FILE
-#             value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/server.crt"
-#           - name: CORE_PEER_TLS_KEY_FILE
-#             value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/server.key"
-#           - name: CORE_PEER_TLS_ROOTCERT_FILE
-#             value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/ca.crt"
-#           - name: CORE_PEER_MSPCONFIGPATH
-#             value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/users/Admin@org3-example-com/msp"
-#           - name: CORE_PEER_ADDRESS
-#             value: "peer0.org3-example-com:7051"
-#           - name: CORE_PEER_LOCALMSPID
-#             value: "org3MSP"
-#           workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
-#           command: [ "/bin/bash", "-c", "--" ]
-#           args: [ "while true; do sleep 30; done;" ]
-#           volumeMounts:
-#            - mountPath: /host/var/run/
-#              name: run
-#            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/examples/chaincode/go/
-#              name: nfs
-#              subPath: chaincode/go/
-#            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
-#              name: nfs
-#              subPath: crypto-config
-#            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts/
-#              name: nfs
-#              subPath: channel-artifacts
-#            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/scripts
-#              name: nfs
-#              subPath: scripts
-#       volumes:
-#         - name: nfs
-#           persistentVolumeClaim:
-#             claimName: nfs-pvc-org3-example-com
-#         - name: run
-#           hostPath:
-#             path: /var/run
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+   namespace: org3-example-com
+   name: cli
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+       app: cli
+    spec:
+      containers:
+        - name: cli
+          image: hyperledger/fabric-tools:latest
+          env:
+          - name: CORE_VM_ENDPOINT
+            value: "unix:///host/var/run/docker.sock"
+          - name: GOPATH
+            value: "/opt/gopath"
+          - name: FABRIC_LOGGING_SPEC
+            value: "DEBUG"
+          - name: CORE_PEER_ID
+            value: "cli"
+          - name: CORE_PEER_TLS_ENABLED
+            value: "true"
+          - name: CORE_PEER_TLS_CERT_FILE
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/server.crt"
+          - name: CORE_PEER_TLS_KEY_FILE
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/server.key"
+          - name: CORE_PEER_TLS_ROOTCERT_FILE
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/peers/peer0.org3-example-com/tls/ca.crt"
+          - name: CORE_PEER_MSPCONFIGPATH
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org3-example-com/users/Admin@org3-example-com/msp"
+          - name: CORE_PEER_ADDRESS
+            value: "peer0.org3-example-com:7051"
+          - name: CORE_PEER_LOCALMSPID
+            value: "org3MSP"
+          workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
+          command: [ "/bin/bash", "-c", "--" ]
+          args: [ "while true; do sleep 30; done;" ]
+          volumeMounts:
+           - mountPath: /host/var/run/
+             name: run
+           - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+             name: nfs
+             subPath: crypto-config
+      volumes:
+        - name: nfs
+          persistentVolumeClaim:
+            claimName: nfs-pvc-org3-example-com
+        - name: run
+          hostPath:
+            path: /var/run
