--- a/configFiles/peerOrg3.yaml
+++ b/configFiles/peerOrg3.yaml
@@ -87,7 +87,7 @@ spec:
         - name: CORE_PEER_GOSSIP_EXTERNALENDPOINT
           value: "peer0.org3-example-com:7051"
         - name: CORE_PEER_LOCALMSPID
-          value: "org3MSP"
+          value: "Org3MSP"
         - name: CORE_PEER_ADDRESSAUTODETECT
           value: "true"
 
