--- a/configFiles/peerOrg4.yaml
+++ b/configFiles/peerOrg4.yaml
@@ -142,24 +142,24 @@ spec:
           - name: CORE_PEER_TLS_ENABLED
             value: "true"
           - name: CORE_PEER_TLS_CERT_FILE
-            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/server.crt"
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/server.crt"
           - name: CORE_PEER_TLS_KEY_FILE
-            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/server.key"
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/server.key"
           - name: CORE_PEER_TLS_ROOTCERT_FILE
-            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/ca.crt"
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/crypto/peerOrganizations/org4-example-com/peers/peer0.org4-example-com/tls/ca.crt"
           - name: CORE_PEER_MSPCONFIGPATH
-            value: "/opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/peerOrganizations/org4-example-com/users/Admin@org4-example-com/msp"
+            value: "/opt/gopath/src/github.com/hyperledger/fabric/crypto/peerOrganizations/org4-example-com/users/Admin@org4-example-com/msp"
           - name: CORE_PEER_ADDRESS
             value: "peer0.org4-example-com:7051"
           - name: CORE_PEER_LOCALMSPID
-            value: "org4MSP"
+            value: "Org4MSP"
           workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
           command: [ "/bin/bash", "-c", "--" ]
           args: [ "while true; do sleep 30; done;" ]
           volumeMounts:
            - mountPath: /host/var/run/
              name: run
-           - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
+           - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/crypto/
              name: nfs
              subPath: crypto-config
       volumes:
